V7.0: (Under development)
  * The support for Windows XP/2003 has been dropped (issue #707). This means:
    - We did not intentionally break XP support.
	- We do no longer test on Windows XP/2003
	- We may accept pull request for XP support if the code quality is sufficient.
	- We recommend to use the V6 branch on Windows XP
  * Fixed issue #739: TVTHeader should use a popup menu if assigned 
  * Enhancement #735: Add event that is fired when a check state is needed
  * Fixed issue #738: Deadlock on application close in ReleaseThreadReference
  * Fixed issue #737: Export problem when OnBeforeNodeExport is not assigned 
  * Fixed issue #723: Turn event OnAfterNodeExport into a procedure. This is a BREAKING CHNAGE.
  * Fixed issue #734: DefaultText property ignored
  * Fixed issue #724: Error when reading "old" streams
  * Fixed issue #397: Horizontal autoscroll on focus does not properly scroll node into view if column width is larger than client width  
  * Fixed issue #727: Header not repainted after loading from stream
  * Fixed issue #726: Incorrect header hot painting
  * Fixed issue #722: Simplify custom header drawing while keeping default drawing
  * Fixed issue #467: Multi level checkboxes and BeginUpdate/EndUpdate issue
  * Fixed issue #391: Change property HotNode: Add a setter 
  * Removed flag toDisableAutoscrollOnFocus from default configuration of a new Virtual TreeView to achieve a more common behavior with default properties.

V6.7: (29 May 2017)
  * Fixed issue #714: Integer overflow in TBaseVirtualTree's InternalAddFromStream
  * Fixed issue #500: Issue with node selection "from code" for disabled nodes with toLevelSelectConstraint option  
  * Fixed issue #499: Incorrect behavior with toLevelSelectConstraint and ctrl+A 
  * Fixed issue #649: Cell navigation problems with toAutoSpanColumns for left and right keys
  * Fixed issue #712: Strange behaviour of AutoFitColumns
  * Fixed issue #718: Shift + Right-Click should not extend selection